# MineMate

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEVLOG.md  THIRD_PARTY_LICENSES.txt  build_all.bat  build_configure.bat  vcpkg.json
docs/: ARCHITECTURE.md
dxf_parser/: CMakeLists.txt  DxfParser.cpp  DxfParser.h  DxfTypes.h
dxf_parser/tests/: parser_tests.cpp
src/: main.cpp
src/app/: Camera.cpp  Camera.h  Session.cpp  Session.h
src/crs/: CoordTransform.cpp  CoordTransform.h
src/gps/: CoordReadout.cpp  CoordReadout.h  IGpsSource.h  MockGpsSource.cpp  MockGpsSource.h  NmeaParser.cpp  NmeaParser.h  SerialGps.cpp  SerialGps.h  TcpGps.cpp  TcpGps.h
src/gps/tests/: gps_tests.cpp
src/renderer/: Renderer.cpp  Renderer.h
src/shaders/: design.hlsl  linework.hlsl  terrain.hlsl
src/terrain/: Config.h  DesignPass.cpp  DesignPass.h  GpuBudget.cpp  GpuBudget.h  LineworkMesh.cpp  LineworkMesh.h  LineworkPass.cpp  LineworkPass.h  Mesh.cpp  Mesh.h  TerrainPass.cpp  TerrainPass.h  TileGrid.cpp  TileGrid.h
